--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -22,15 +22,13 @@
                                     <h2 class="product__price">$
                                         <%= product.price %>
                                     </h2>
-                                    <!-- <p class="product__description">
+                                    <p class="product__description">
                                         <%= product.description %>
-                                    </p> -->
+                                    </p>
                                 </div>
                                 <div class="card__actions">
                                     <a href="/products/<%= product.id %>" class="btn">Details</a>
-                                    <form action="/add-to-cart" method="POST">
-                                        <button class="btn">Add to Cart</button>
-                                    </form>
+                                    <%- include("../includes/add-to-cart.ejs", {product: product}) %>
                                 </div>
                             </article>
                             <% } %>
